--- a/app/assets/stylesheets/nav_bar.sass
+++ b/app/assets/stylesheets/nav_bar.sass
@@ -57,9 +57,7 @@
   letter-spacing: 0
   font-size: 120%
   @include if-below-width(37em)
-    font-size: 171%
-  @include if-below-width(32em)
-    font-size: 200%
+    font-size: 160%
   text-align: right
   box-shadow: 0 1ex 1ex rgba(0, 0, 0, 0.333)
   border-top: 0.5px solid $hairline-color
